# ai-powered-academic-paper-fetcher

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/paper_fetch/: __init__.py  cache.py  cli.py  config.py  llm.py  logging_setup.py  models.py  pipeline.py  zotero_client.py
src/paper_fetch/download/: __init__.py  direct.py  vpn.py
src/paper_fetch/download/adapters/: __init__.py  acs.py  base.py  elsevier.py  generic.py  ieee.py  springer.py  wiley.py
src/paper_fetch/search/: __init__.py  crossref.py  semantic_scholar.py  unpaywall.py
tests/: conftest.py  test_adapters.py  test_download_direct.py  test_models.py  test_pipeline.py  test_search.py  test_zotero_client.py
