[project]
name = "paper-fetch"
version = "0.1.0"
description = "AI-powered academic paper fetcher — turn natural-language queries into Zotero library entries with attached PDFs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "litellm>=1.40",
    "requests>=2.32",
    "tenacity>=8",
    "playwright>=1.44",
    "playwright-stealth>=1.0",
    "pyzotero>=1.5",
    "questionary>=2.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "diskcache>=5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
paper-fetch = "paper_fetch.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_fetch"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
